<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/backGround"
    tools:context=".ShowsCategoriesActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <TextView
        android:onClick="moreTvShowsClickListner"
        android:textColor="@color/colorAccent"
        style="@style/upperBarTitels"
        android:text="@string/tv_shows"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:onClick="moreRealityShowsClickListner"
        android:textColor="@color/colorAccent"
        style="@style/upperBarTitels"
        android:text="@string/reality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:onClick="moreTvDocumentaryClickListner"
        android:textColor="@color/colorAccent"
        style="@style/upperBarTitels"
        android:text="@string/documentary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:onClick="moreEntertaimentShowsClickListner"
        android:textColor="@color/colorAccent"
        style="@style/upperBarTitels"
        android:text="@string/entertainment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>