<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    style="@style/backGround"
    android:orientation="vertical"
    android:layout_height="match_parent">



    <ScrollView
        android:scrollbars="none"
        android:layout_weight="9"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        tools:context=".MainActivity"
        >

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <LinearLayout

            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:id="@+id/id_main_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                style="@style/surfaceLevel1"
                android:orientation="vertical"
                android:id="@+id/id_tell_your_friends_layout"
                android:layout_width="match_parent"
                android:layout_height="300dp">



                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="5dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:src="@drawable/ic_message_gray_24dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                    android:textStyle="bold"
                    style="@style/mainShowTitle"
                    android:text="@string/tell_your_friends"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                </LinearLayout>



                <TextView
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="10dp"
                    style="@style/subShowTitle"
                    android:text="@string/shareLinkStatement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                <LinearLayout
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    style="@style/backGround"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="40dp">

                    <TextView
                        android:maxLines="1"
                        android:id="@+id/id_app_link_tv"
                        style="@style/subShowTitle"
                        android:layout_weight="15"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                    <Button
                        android:onClick="copyLinkClick"
                        android:text="@string/copy_link"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <TextView
                    android:text="@string/our_accounts"
                    android:layout_marginBottom="20dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    style="@style/mainShowTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="60dp">
                    <ImageView
                        android:onClick="faceBookClick"
                        android:src="@drawable/facebook"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"/>
                        <TextView
                            android:gravity="center"
                            android:textStyle="bold"
                            style="@style/subShowTitle"
                            android:text="FaceBook"
                            android:layout_width="match_parent"
                            android:layout_height="20dp"/>
                    </LinearLayout>



                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="60dp">
                    <ImageView
                        android:onClick="twitterClick"
                        android:src="@drawable/twitter"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"/>

                        <TextView
                            android:gravity="center"
                            android:textStyle="bold"
                            style="@style/subShowTitle"
                            android:text="Twitter"
                            android:layout_width="match_parent"
                            android:layout_height="20dp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="60dp">
                    <ImageView
                        android:onClick="youtubeClick"
                        android:src="@drawable/youtube"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"/>
                        <TextView
                            android:gravity="center"
                            android:textStyle="bold"
                            style="@style/subShowTitle"
                            android:text="Youtube"
                            android:layout_width="match_parent"
                            android:layout_height="20dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="60dp">
                    <ImageView
                        android:onClick="InstagramClick"
                        android:src="@drawable/instagram"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"/>
                        <TextView
                            android:gravity="center"
                            android:textStyle="bold"
                            style="@style/subShowTitle"
                            android:text="Instagram"
                            android:layout_width="match_parent"
                            android:layout_height="20dp"/>
                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="200dp">


                <LinearLayout
                    android:onClick="SignInClick"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <ImageView
                        android:src="@drawable/ic_person_gray_24dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/id_signinOrName"
                        android:layout_marginStart="4dp"
                        android:text="@string/sing_in"
                        style="@style/mainShowTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>


                <LinearLayout
                    android:onClick="myListOnClick"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@drawable/ic_playlist_add_gray_24dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_marginStart="4dp"
                        android:text="@string/my_list"
                        style="@style/mainShowTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:onClick="historyOnClick"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@drawable/ic_history_black_24dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_marginStart="4dp"
                        android:text="@string/my_history"
                        style="@style/mainShowTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:gravity="center"
            android:id="@+id/id_no_results_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:src="@drawable/connectionerror"
                android:layout_width="200dp"
                android:layout_height="200dp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="30dp"
            android:id="@+id/id_progress_bar_linear_layout"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
</LinearLayout>

    </ScrollView>


    <LinearLayout
        android:background="@color/BackGround"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <com.google.android.material.bottomnavigation.BottomNavigationView
            style="@style/backGround"
            app:itemBackground="@color/BackGround"
            app:itemTextColor="@drawable/selector"
            app:itemIconTint="@drawable/selector"
            android:id="@+id/id_bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            app:menu="@menu/bottom_navigation_bar"/>
    </LinearLayout>


</LinearLayout>
