<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/backGround"
    android:gravity="center">

    <ScrollView
        android:id="@+id/id_results_layout"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        style="@style/surface"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="175dp">
            <FrameLayout
                android:layout_width="125dp"
                android:layout_height="175dp">
                <ImageView
                    android:scaleType="centerCrop"
                    android:id="@+id/id_details_image_poster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_launcher_background"
                    />
            </FrameLayout>

            <LinearLayout
                android:paddingStart="10dp"
                android:orientation="vertical"
                android:layout_weight="1.5"
                android:layout_width="0dp"
                android:layout_height="175dp">
                <TextView
                    android:paddingBottom="15dp"
                    style="@style/mainShowTitle"
                    android:id="@+id/id_details_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:paddingBottom="6dp"
                    style="@style/subShowTitle"
                    android:id="@+id/id_details_year_of_production"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    style="@style/subShowTitle"
                    android:paddingBottom="6dp"
                    tools:text="@string/movie"
                    android:id="@+id/id_details_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/subShowTitle"
                    android:paddingBottom="6dp"
                    android:id="@+id/id_details_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    tools:text="7/10"
                    style="@style/subShowTitle"
                    android:paddingBottom="6dp"
                    android:id="@+id/id_details_show_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:id="@+id/id_is_list_added"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_playlist_add_gray_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>





        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:gravity="center"
        android:visibility="gone"
        android:id="@+id/details_ratting_linear_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RatingBar
            android:isIndicator="false"
            style="@style/ImageRatingBar"
            android:id="@+id/details_rating_bar"
            android:stepSize="1"
            android:layout_marginTop="12dp"
            android:numStars="5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </RatingBar>

        <TextView
            android:layout_marginStart="12dp"
            android:id="@+id/id_number_of_voters"
            tools:text="( 0 votes rate this now)"
            style="@style/mainShowTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        style="@style/surface"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/mainShowTitle"
            android:paddingBottom="10dp"
            android:text="@string/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            style="@style/subShowTitle"
            android:id="@+id/id_details_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        style="@style/surface"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/mainShowTitle"
            android:paddingBottom="10dp"
            android:text="@string/tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/id_recyclerView_tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <!--  actors recycler view start  -->
    <LinearLayout
        android:layout_marginTop="30dp"
        style="@style/surface"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/mainShowTitle"
            android:paddingBottom="10dp"
            android:text="@string/actors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <androidx.recyclerview.widget.RecyclerView
            style="@style/recyclerView"
            android:id="@+id/id_rv_main_role_actors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <!--  Actors recycler view end    -->
    </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:gravity="center"
        android:id="@+id/id_progress_bar_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>



</LinearLayout>